[gd_scene load_steps=16 format=4 uid="uid://bt8yqkrkclo25"]

[ext_resource type="Script" path="res://Testing/grid_env.gd" id="1_ehikl"]
[ext_resource type="Texture2D" uid="uid://dr7gb1ykxcqx4" path="res://Assets/testing123.png" id="1_qgoje"]
[ext_resource type="PackedScene" uid="uid://121l2j4bpw8g" path="res://Testing/Player.tscn" id="1_uus8d"]
[ext_resource type="Script" path="res://Testing/tile_map.gd" id="2_a0seq"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_a8lqy"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3di2c"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_flnjx"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_5epxg"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_e6dwh"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_rp88q"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_idml3"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_g6ups"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_f0ya1"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iidrl"]
texture = ExtResource("1_qgoje")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_idml3")
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_3di2c")
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
2:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_a8lqy")
3:4/0 = 0
3:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_flnjx")
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_5epxg")
4:5/0 = 0
5:5/0 = 0
5:5/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_g6ups")
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
3:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_e6dwh")
4:6/0 = 0
4:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_rp88q")
5:6/0 = 0
5:6/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_f0ya1")
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0

[sub_resource type="TileSet" id="TileSet_mg3m8"]
physics_layer_0/collision_layer = 1
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_iidrl")

[node name="GridEnv" type="Node2D"]
script = ExtResource("1_ehikl")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAAFAAUAAAABAAEAAAAFAAUAAAABAAAAAAAGAAIAAAACAAAAAAAFAAUAAAADAAAAAAAFAAIAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAACAAAAAAAGAAEAAAACAAEAAAAFAAEAAAAFAAUAAAAEAAEAAAAFAAUAAAADAAEAAAAFAAUAAAACAAEAAAAFAAUAAAAAAAIAAAAFAAUAAAABAAIAAAAFAAUAAAACAAIAAAAFAAUAAAADAAIAAAAFAAUAAAAEAAIAAAAFAAUAAAAFAAIAAAAFAAUAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAFAAMAAAAFAAUAAAAEAAMAAAAFAAUAAAADAAMAAAAFAAUAAAACAAMAAAAFAAUAAAABAAMAAAAFAAUAAAAAAAMAAAAFAAUAAAAHAAMAAAAGAAYAAAAHAAIAAAAGAAYAAAAHAAEAAAAGAAYAAAAGAAQAAAAFAAIAAAAFAAQAAAABAAYAAAAEAAQAAAAFAAUAAAADAAQAAAAFAAUAAAACAAQAAAAFAAUAAAABAAQAAAAFAAUAAAAAAAQAAAAFAAUAAAD//wAAAAAAAAAAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAAAAP//AAAGAAYAAAABAP//AAAAAAEAAAACAP//AAAFAAUAAAADAP//AAACAAEAAAAEAP//AAAGAAYAAAAFAP//AAAGAAYAAAAGAP//AAAGAAYAAAACAP7/AAAFAAUAAAADAP7/AAAFAAEAAAAEAP7/AAABAAIAAAAFAP7/AAABAAIAAAAIAP7/AAABAAIAAAAJAP//AAAAAAEAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAIAAAAEAAUAAAAFAAUAAAADAAUAAAAFAAUAAAACAAUAAAAFAAUAAAAFAAUAAAAFAAUAAAAGAAYAAAAFAAUAAAAHAAYAAAAFAAUAAAAIAAYAAAAFAAUAAAAJAAYAAAAFAAUAAAAFAAYAAAAFAAUAAAAEAAYAAAAFAAUAAAADAAYAAAAFAAUAAAAKAAYAAAAFAAUAAAALAAYAAAAFAAUAAAALAAUAAAAFAAUAAAAMAAUAAAAFAAUAAAAMAAQAAAABAAAAAAAMAAMAAAAGAAYAAAANAAMAAAAAAAEAAAANAAIAAAAAAAEAAAAOAAMAAAAFAAUAAAAOAAQAAAAFAAUAAAAOAAUAAAAFAAUAAAAOAAIAAAAFAAUAAAANAAYAAAAFAAUAAAAMAAYAAAAFAAUAAAAOAAYAAAAFAAUAAAAPAAYAAAAFAAUAAAAPAAUAAAAFAAUAAAANAAQAAAAGAAIAAAANAAUAAAAFAAUAAAAKAAIAAAABAAIAAAAKAAAAAAAFAAUAAAAKAP//AAAFAAUAAAAKAP7/AAAFAAUAAAAJAP7/AAAGAAEAAAACAP3/AAAFAAUAAAADAP3/AAAFAAUAAAAEAP3/AAAFAAUAAAAFAP3/AAAFAAUAAAAHAP3/AAAFAAUAAAAIAP3/AAAFAAUAAAAJAP3/AAAFAAUAAAAKAP3/AAAFAAUAAAAKAPz/AAABAAAAAAAJAPz/AAABAAAAAAAIAPz/AAABAAAAAAAHAPz/AAABAAAAAAAGAPz/AAABAAAAAAAFAPz/AAABAAAAAAAEAPz/AAABAAAAAAADAPz/AAABAAAAAAACAPz/AAABAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAEAAAABAP7/AAAAAAEAAAALAPz/AAACAAAAAAALAP3/AAACAAEAAAALAP7/AAACAAEAAAALAP//AAACAAEAAAALAAAAAAACAAEAAAALAAEAAAACAAEAAAALAAIAAAACAAIAAAAKAAEAAAAFAAUAAAAJAAAAAAAAAAEAAAAIAP//AAAGAAYAAAAHAP//AAAGAAYAAAAHAP7/AAABAAIAAAAGAP7/AAABAAIAAAAGAP3/AAACAAYAAAAHAAAAAAAGAAYAAAAIAAAAAAAGAAYAAAAIAAEAAAAGAAYAAAAIAAIAAAAGAAYAAAAIAAMAAAAGAAYAAAAJAAMAAAAGAAYAAAAKAAMAAAAGAAYAAAALAAMAAAAGAAYAAAAMAAIAAAAGAAYAAAAMAAEAAAAGAAYAAAAMAAAAAAAGAAYAAAAMAP//AAAGAAYAAAAMAP7/AAAGAAYAAAAMAP3/AAAGAAYAAAAMAPz/AAAGAAYAAAAMAPv/AAAGAAYAAAALAPv/AAAGAAYAAAAKAPv/AAAGAAYAAAAJAPv/AAAGAAYAAAAIAPv/AAAGAAYAAAAHAPv/AAAGAAYAAAAGAPv/AAAGAAYAAAAFAPv/AAAGAAYAAAAEAPv/AAAGAAYAAAADAPv/AAAGAAYAAAACAPv/AAAGAAYAAAABAPv/AAAGAAYAAAAAAPv/AAAGAAYAAAAAAPz/AAAGAAYAAAAAAP3/AAAGAAYAAAAAAP7/AAAGAAYAAAD//wQAAAAAAAEAAAD//wUAAAAAAAIAAAAAAAUAAAABAAIAAAABAAUAAAAGAAEAAAD+/wAAAAAGAAYAAAD+/wEAAAAGAAYAAAD+/wIAAAAGAAYAAAD+/wMAAAAGAAYAAAD+/wQAAAAGAAYAAAD+/wUAAAAGAAYAAAD/////AAAGAAYAAAD+////AAAGAAYAAAABAAYAAAAAAAIAAAACAAYAAAAGAAEAAAACAAcAAAAAAAIAAAADAAcAAAABAAIAAAAEAAcAAAABAAIAAAAFAAcAAAABAAIAAAAGAAcAAAABAAIAAAAHAAcAAAABAAIAAAAIAAcAAAABAAIAAAAJAAcAAAABAAIAAAAKAAcAAAABAAIAAAALAAcAAAABAAIAAAAMAAcAAAABAAIAAAANAAcAAAABAAIAAAAOAAcAAAABAAIAAAAPAAcAAAABAAIAAAAQAAcAAAACAAIAAAAPAAIAAAAFAAUAAAAPAAMAAAAFAAUAAAAPAAQAAAAFAAUAAAANAAEAAAAAAAAAAAALAAQAAAABAAAAAAAKAAQAAAABAAAAAAAJAAQAAAABAAAAAAAIAAQAAAABAAAAAAAHAAQAAAABAAAAAAAKAAUAAAAFAAUAAAAJAAUAAAAFAAUAAAAIAAUAAAAFAAUAAAAHAAUAAAAFAAUAAAAGAAUAAAAFAAUAAAAOAAEAAAABAAAAAAAPAAEAAAABAAAAAAAQAAEAAAACAAAAAAAQAAIAAAACAAEAAAAQAAMAAAACAAEAAAAQAAQAAAACAAEAAAAQAAUAAAACAAEAAAAQAAYAAAACAAEAAAANAAAAAAAGAAYAAAAOAAAAAAAGAAYAAAAPAAAAAAAGAAYAAAAQAAAAAAAGAAYAAAARAAAAAAAGAAYAAAARAAEAAAAGAAYAAAARAAIAAAAGAAYAAAARAAMAAAAGAAYAAAARAAQAAAAGAAYAAAARAAUAAAAGAAYAAAARAAYAAAAGAAYAAAARAAcAAAAGAAYAAAARAAgAAAAGAAYAAAAQAAgAAAAGAAYAAAAPAAgAAAAGAAYAAAAOAAgAAAAGAAYAAAANAAgAAAAGAAYAAAAMAAgAAAAGAAYAAAALAAgAAAAGAAYAAAAKAAgAAAAGAAYAAAAJAAgAAAAGAAYAAAAIAAgAAAAGAAYAAAAHAAgAAAAGAAYAAAAGAAgAAAAGAAYAAAAFAAgAAAAGAAYAAAAEAAgAAAAGAAYAAAADAAgAAAAGAAYAAAACAAgAAAAGAAYAAAABAAgAAAAGAAYAAAABAAcAAAAGAAYAAAAAAAcAAAAGAAYAAAAAAAYAAAAGAAYAAAD//wYAAAAGAAYAAAD+/wYAAAAGAAYAAAA=")
tile_set = SubResource("TileSet_mg3m8")
script = ExtResource("2_a0seq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(136, 41)
zoom = Vector2(2.51, 2.51)

[node name="Players" type="Node" parent="."]

[node name="Player" parent="Players" instance=ExtResource("1_uus8d")]
position = Vector2(8, 23)
input_pickable = true

[node name="Player2" parent="Players" instance=ExtResource("1_uus8d")]
position = Vector2(56, 71)
input_pickable = true

[node name="Player3" parent="Players" instance=ExtResource("1_uus8d")]
position = Vector2(88, 104)
input_pickable = true

[connection signal="request_move" from="TileMap" to="Players/Player" method="_on_tile_map_request_move"]
[connection signal="request_move" from="TileMap" to="Players/Player2" method="_on_tile_map_request_move"]
[connection signal="request_move" from="TileMap" to="Players/Player3" method="_on_tile_map_request_move"]
[connection signal="moved_spots" from="Players/Player" to="TileMap" method="_on_player_moved_spots"]
[connection signal="player_selected" from="Players/Player" to="TileMap" method="_on_player_selected"]
[connection signal="moved_spots" from="Players/Player2" to="TileMap" method="_on_player_moved_spots"]
[connection signal="player_selected" from="Players/Player2" to="TileMap" method="_on_player_selected"]
[connection signal="moved_spots" from="Players/Player3" to="TileMap" method="_on_player_moved_spots"]
[connection signal="player_selected" from="Players/Player3" to="TileMap" method="_on_player_selected"]
